--- a/WebMVC/Views/Shared/_Layout.cshtml
+++ b/WebMVC/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Account" asp-action="MyLogins">MyLogins</a></li>
                     <li><a asp-area="" asp-controller="Account" asp-action="Signout">Signout</a></li>
                 </ul>
             </div>
