--- a/WebMVC/Views/Home/Index.cshtml
+++ b/WebMVC/Views/Home/Index.cshtml
@@ -1,15 +1,74 @@
 ﻿@*<img src="~/images/man-computer-headphones.jpg" class="" alt="Responsive image">*@
 
-<div id="introduction" class="row">
+<div id="introduction">
     <div class="container">
-        <div class="col-10">
-            <h1>antvpn</h1>
-            <h3>Blazing fast, planet-scale VPN Services</h3>
-            <h5>vpn service for highly available, globally distributed servers.</h5>
-            <br />
-            <a href="#" class="btn btn-lg btn-outline-success">Start free ></a>
+        <div class="row">
+            <div class="col-10">
+                <h1 class="title">antvpn.io</h1>
+                <h3>Blazing fast, planet-scale VPN Services</h3>
+                <h5>vpn service for highly available, globally distributed servers.</h5>
+                <br />
+                <a href="http://localhost:5105/account/register" class="btn btn-lg btn-outline-success">Start free ></a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div id="overview">
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <img src="~/images/01-low-latency.png" class="img-fluid" alt="Responsive image">
+            </div>
+            <div class="col-8">
+                <h2>Guaranteed low latency</h2>
+                <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
+            </div>
+        </div>
+        <hr />
+        <div class="row row-divided">
+            <div class="col-4">
+                <img src="~/images/03-replicate.png" class="img-fluid" alt="Responsive image">
+            </div>
+            <div class="col-8">
+                <h2>Replicate data globally</h2>
+                <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
+            </div>
+        </div>
+        <hr />
+        <div class="row row-divided">
+            <div class="col-4">
+                <img src="~/images/01-low-latency.png" class="img-fluid" alt="Responsive image">
+            </div>
+            <div class="col-8">
+                <h2>Highly available</h2>
+                <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
+            </div>
         </div>
     </div>
+</div>
+
+<div id="usageCarouselControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+            <img class="d-block img-fluid" src="~/images/walking-dead.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="~/images/halo.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="~/images/office-explanation.jpg" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#usageCarouselControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#usageCarouselControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
 <div id="global">
@@ -17,65 +76,3 @@
         <img src="~/images/global.png" class="" alt="Responsive image">
     </div>
 </div>
-@*<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how to build ASP.NET apps that can run anywhere.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        There are powerful new features in Visual Studio for building modern web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>*@
