--- a/WebMVC/Views/Account/MyLogins.cshtml
+++ b/WebMVC/Views/Account/MyLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Extensions.LoginStatus>
+﻿@model WebMVC.ViewModels.LoginBindingModel
 
 
 <div class="container">
@@ -13,17 +13,17 @@
         </a>
     </div>
 
-    @if (Model != null)
+    @if (ViewData["logins"] != null)
     {
         <div class="entity-list entity-list-expandable">
-            @foreach (var l in Model)
+            @foreach (var l in (IEnumerable<Extensions.LoginStatus>)ViewData["logins"])
             {
                 <div class="entity-list-item">
                     <div class="item-icon">
                         <span class="glyph glyph-people"></span>
                     </div>
                     <div class="item-content-secondary">
-                        <div class="content-text-primary">@(l.BasicAcct.TotalInOutDisplay)</div>
+                        <div class="content-text-primary">@(l.BasicAcct?.TotalInOutDisplay)</div>
                         <div class="content-text-secondary">@DateTime.Now.ToString("yyyy/MM/dd")</div>
                     </div>
                     <div class="item-content-primary">
@@ -52,33 +52,44 @@
 
 <div class="modal" id="modal-addlogin" tabindex="-1" role="dialog" aria-labelledby="modal-sample-label" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" id="modal-sample-label">
-                    Create VPN Server Login
-                </h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+        <form asp-controller="Account" asp-action="Create" method="post">
+            <!-- Input and Submit elements -->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="modal-sample-label">
+                        Create VPN Server Login
+                    </h4>
                 </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="UserName">Username</label>
+                        <input asp-for="UserName" class="form-control" >
+                        <span asp-validation-for="UserName"></span>
+                    </div>
 
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <div class="form-group">
+                        <label for="Password">Password</label>
+                        <input asp-for="Password" class="form-control" >
+                        <span asp-validation-for="Password"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="ConfirmPassword">Password</label>
+                        <input asp-for="ConfirmPassword" class="form-control">
+                        <span asp-validation-for="ConfirmPassword"></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">
+                        Submit
+                    </button>
+                    <button type="button" class="btn btn-info"
+                            data-dismiss="modal">
+                        Cancel
+                    </button>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">
-                    Submit
-                </button>
-                <button type="button" class="btn btn-info"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
-            </div>
-        </div>
+        </form>
     </div>
 </div>
 
@@ -93,13 +104,19 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                    <label for="UserName">New Password</label>
+                    <input asp-for="UserName" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="Password">New Password</label>
+                    <input asp-for="Password" class="form-control">
+                    <span asp-validation-for="Password"></span>
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label for="ConfirmPassword">Confirm Password</label>
+                    <input asp-for="ConfirmPassword" class="form-control">
+                    <span asp-validation-for="ConfirmPassword"></span>
                 </div>
             </div>
             <div class="modal-footer">
