--- a/WebMVC/Views/Shared/_Layout.cshtml
+++ b/WebMVC/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
 
     @*<environment names="Development">*@
     <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/lib/Winstrap/dist/js/vendor/bootstrap.min.js"></script>
     <script src="~/lib/Winstrap/src/js/app.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
