--- a/WebMVC/Views/Account/MyLogins.cshtml
+++ b/WebMVC/Views/Account/MyLogins.cshtml
@@ -24,7 +24,7 @@
                     </div>
                     <div class="item-content-secondary">
                         <div class="content-text-primary">@(l.BasicAcct?.TotalInOutDisplay)</div>
-                        <div class="content-text-secondary">@DateTime.Now.ToString("yyyy/MM/dd")</div>
+                        <div class="content-text-secondary">@(l.LastUpdated?.ToLocalTime().ToString("yyyy/MM/dd"))</div>
                     </div>
                     <div class="item-content-primary">
                         <div class="content-text-primary">@l.LoginName</div>
