--- a/WebMVC/wwwroot/css/site.css
+++ b/WebMVC/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 ﻿a.navbar-brand {
   color: #89BF04 !important;
+  font-size: xx-large;
 }
 #introduction {
   background: url("/images/man-computer-headphones.jpg") no-repeat;
