--- a/WebMVC/Views/Home/Index.cshtml
+++ b/WebMVC/Views/Home/Index.cshtml
@@ -18,68 +18,14 @@
                 </p>
                 <div class="btn-group">
                     <button class="btn btn-success" href="#">Start free</button>
-                    <button class="btn btn-primary" href="#">Buy now</button>
+                    <button class="btn btn-secondary" href="#">Buy now</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div id="overview">
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <img src="~/images/01-low-latency.png" class="img-fluid" alt="Responsive image">
-            </div>
-            <div class="col-8">
-                <h2>Guaranteed low latency</h2>
-                <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
-            </div>
-        </div>
-        <hr />
-        <div class="row row-divided">
-            <div class="col-4">
-                <img src="~/images/03-replicate.png" class="img-fluid" alt="Responsive image">
-            </div>
-            <div class="col-8">
-                <h2>Replicate data globally</h2>
-                <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
-            </div>
-        </div>
-        <hr />
-        <div class="row row-divided">
-            <div class="col-4">
-                <img src="~/images/01-low-latency.png" class="img-fluid" alt="Responsive image">
-            </div>
-            <div class="col-8">
-                <h2>Highly available</h2>
-                <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div id="usageCarouselControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-            <img class="d-block img-fluid" src="~/images/walking-dead.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block img-fluid" src="~/images/halo.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block img-fluid" src="~/images/office-explanation.jpg" alt="Third slide">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#usageCarouselControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#usageCarouselControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
 
 <div class="jumbotron theme-dark">
     <div class="container">
@@ -102,3 +48,81 @@
         <img src="~/images/global.png" class="" alt="Responsive image">
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*<div id="overview">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <img src="~/images/01-low-latency.png" class="img-fluid" alt="Responsive image">
+                </div>
+                <div class="col-8">
+                    <h2>Guaranteed low latency</h2>
+                    <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
+                </div>
+            </div>
+            <hr />
+            <div class="row row-divided">
+                <div class="col-4">
+                    <img src="~/images/03-replicate.png" class="img-fluid" alt="Responsive image">
+                </div>
+                <div class="col-8">
+                    <h2>Replicate data globally</h2>
+                    <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
+                </div>
+            </div>
+            <hr />
+            <div class="row row-divided">
+                <div class="col-4">
+                    <img src="~/images/01-low-latency.png" class="img-fluid" alt="Responsive image">
+                </div>
+                <div class="col-8">
+                    <h2>Highly available</h2>
+                    <p>Azure DocumentDB guarantees less than 10 ms latencies on reads and less than 15 ms latencies on writes for at least 99% of requests. DocumentDB leverages a write-optimized, latch-free database engine designed for high-performance solid-state drives to run in the cloud at global scale. Read and write requests are always served from your local region while data can be distributed to other regions across the globe.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="usageCarouselControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <img class="d-block img-fluid" src="~/images/walking-dead.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img-fluid" src="~/images/halo.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img-fluid" src="~/images/office-explanation.jpg" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#usageCarouselControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#usageCarouselControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>*@
