clear identity style redirect to mvc

--- a/Identity.API/Views/Account/Login.cshtml
+++ b/Identity.API/Views/Account/Login.cshtml
@@ -7,12 +7,12 @@
 @{
     ViewData["Title"] = "Log in";
 }
-<div class="brand-header-block">
+@*<div class="brand-header-block">
     <ul class="container">
         <li><a asp-area="" asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">REGISTER</a></li>
         <li class="active" style="margin-right: 65px;">LOGIN</li>
     </ul>
-</div>
+</div>*@
 <div class="container account-login-container">
     <div class="row">
         <div class="col-md-12">
