--- a/Identity.API/Views/Shared/_Layout.cshtml
+++ b/Identity.API/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eShopOnContainers Identity</title>
+    <title>antvpn.io Identity</title>
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
     <environment names="Development">
@@ -18,7 +18,7 @@
     </environment>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top es-header">
+    @*<div class="navbar navbar-inverse navbar-fixed-top es-header">
         <div class="container">
             <div class="row">
                 <div class="navbar-header col-sm-6 col-xs-8">
@@ -28,26 +28,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
     <div>
         @RenderBody()
         <br /><br />
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <br><div class="brand"></div>
-                    </div>
-                    <div class="col-sm-6">
-                        <br />
-                        <br>
-                        <br />
-                        <div class="text hidden-xs">&copy; e-ShoponContainers. All right reserved</div>
-                    </div>
-                </div>
-            </div>
-        </footer>
     </div>
 
 
