--- a/Identity.API/Views/Account/Register.cshtml
+++ b/Identity.API/Views/Account/Register.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewData["Title"] = "Register";
 }
-<div class="brand-header-block">
+@*<div class="brand-header-block">
     <ul class="container">
         <li class="active">REGISTER</li>
         <li style="margin-right: 65px;"><a asp-area="" asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]">LOGIN</a></li>
     </ul>
-</div>
+</div>*@
 <div class="container register-container">
     <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
         <h4 class="order-create-section-title">CREATE NEW ACCOUNT</h4>
@@ -98,6 +98,9 @@
         <div class="form-group">
             <button type="submit" class="btn btn-default btn-brand">&nbsp;Register&nbsp;</button>
         </div>
+        <p>
+            <a asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" class="text">ARE YOU REGISTERED?</a>
+        </p>
         <br /><br />
     </form>
 </div>
