fix JSON and Backslash

--- a/WebMVC/Views/Home/Index.cshtml
+++ b/WebMVC/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
 
 <div id="global">
     <div class="container">
-        <img src="~/images/global.png" class="" alt="Responsive image">
+        <img src="~/images/global.png" class="img-responsive hidden-xs" alt="Responsive image">
     </div>
 </div>
 
