fix aduser name length add markdown taghelper

--- a/WebMVC/Views/Shared/_Layout.cshtml
+++ b/WebMVC/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>@ViewData["Title"] - antvpn.io</title>
+    <title>antvpn.io</title>
 
     @*<environment names="Development">*@
     <link rel="stylesheet" href="~/lib/Winstrap/dist/css/winstrap.css" />
@@ -31,6 +31,8 @@
                 <span class="text-muted">&copy; 2017 - antvpn.io</span>
             </div>
         </footer>
+
+
     @*</div>*@
 
     @*<environment names="Development">*@
