--- a/WebMVC/Views/Shared/_Navbar.cshtml
+++ b/WebMVC/Views/Shared/_Navbar.cshtml
@@ -70,12 +70,12 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="colors.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<i class="glyph glyph-chevron-down-2"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<i class="glyph glyph-chevron-down-2"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a asp-controller="Docs" asp-action="Index" asp-route-id="Contact-us">Contact us</a></li>
+                            <li><a asp-controller="Home" asp-action="ContactUs">Contact us</a></li>
                             <li class="divider"></li>
-                            <li><a asp-controller="Docs" asp-action="Index" asp-route-id="Privacy-Statement">Privacy & cookies</a></li>
-                            <li><a asp-controller="Docs" asp-action="Index" asp-route-id="Terms-of-use">Terms of use</a></li>
+                            <li><a asp-controller="Home" asp-action="PrivacyStatement">Privacy & cookies</a></li>
+                            <li><a asp-controller="Home" asp-action="TermsOfUse">Terms of use</a></li>
                         </ul>
                     </li>
                     @*<li>
