--- a/WebMVC/Views/Shared/_Navbar.cshtml
+++ b/WebMVC/Views/Shared/_Navbar.cshtml
@@ -60,6 +60,9 @@
                     <li>
                         <a class="color-type-secondary" asp-controller="Docs" asp-action="Index" data-toggle="modal">Documentation</a>
                     </li>
+                    <li>
+                        <a class="color-type-secondary" asp-controller="Server" asp-action="Index" data-toggle="modal">Servers</a>
+                    </li>
                     <li class="dropdown">
                         <a href="colors.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Download<i class="glyph glyph-chevron-down-2"></i></a>
                         <ul class="dropdown-menu" role="menu">
