--- a/WebMVC/Views/Shared/_Layout.cshtml
+++ b/WebMVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>antvpn.io</title>
 
     @*<environment names="Development">*@
+    <link rel="stylesheet" href="~/lib/winjs/css/ui-light.css" />
     <link rel="stylesheet" href="~/lib/Winstrap/dist/css/winstrap.css" />
     <link rel="stylesheet" href="~/lib/Winstrap/dist/css/winstrap-optional.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -39,6 +40,8 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/winjs/js/base.js"></script>
+    <script src="~/lib/winjs/js/ui.js"></script>
     <script src="~/lib/Winstrap/dist/js/vendor/bootstrap.min.js"></script>
     <script src="~/lib/Winstrap/src/js/app.js"></script>
     <script src="~/lib/chart.js/dist/Chart.js"></script>
