--- a/WebMVC/Views/Dashboard/Index.cshtml
+++ b/WebMVC/Views/Dashboard/Index.cshtml
@@ -165,7 +165,7 @@
                 <div class="modal-body">
                     <input type="hidden" name="UserName" id="resetusername-configure" class="form-control">
                     <div class="form-group">
-                        <label for="MonthlyTraffic">Max Monthly Traffic: <span id="max-traffic"></span></label>
+                        <label for="MonthlyTraffic">Shared Traffic: <span id="max-traffic"></span></label>
                         <input id="slider-traffic" name="MonthlyTraffic" class="win-slider" type="range" step="10485760" min="0" max="@ViewData["traffic"]" />
                     </div>
 
@@ -232,9 +232,13 @@
             $("#slider-traffic").on("change", (e) => {
                var value = $("#slider-traffic").val();
                value = Number(value);
-               console.log(typeof value);
-               value = value / 1024 / 1024;
-               $("#max-traffic").html(value + " MB");
+               if (value == 0) {
+                   $("#max-traffic").html("unlimited");
+               } else {
+                   value = value / 1024 / 1024;
+                   $("#max-traffic").html(value + " MB");
+               }
+               
             });
         });
     </script>
